Upgrade to Java 20
- fix some linter warnings
- reenable Swagger Request Validator